chore(packages): define l10n as dependency

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@commmercetools/ui-kit",
+  "name": "@commercetools/ui-kit",
   "version": "1.0.0",
   "description": "",
   "license": "Proprietary",
