feat(ui-kit): add application-shell-connectors to uikit

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "Proprietary",
   "private": true,
   "dependencies": {
+    "@commercetools-local/application-shell-connectors": "*",
     "@commercetools-local/utils": "*"
   }
 }
