--- a/package.json
+++ b/package.json
@@ -5,6 +5,30 @@
   "license": "Proprietary",
   "private": true,
   "dependencies": {
-    "@commercetools-local/utils": "*"
+    "@commercetools-local/utils": "*",
+    "classnames": "2.2.5",
+    "cleave.js": "1.3.3",
+    "common-tags": "1.7.2",
+    "dom-helpers": "3.3.1",
+    "flatpickr": "4.5.0",
+    "is-touch-device": "1.0.1",
+    "invariant": "2.2.4",
+    "lodash.isfinite": "3.3.2",
+    "lodash.isnil": "4.0.0",
+    "lodash.isundefined": "3.0.1",
+    "lodash.omit": "4.5.0",
+    "lodash.pick": "4.4.0",
+    "lodash.sortby": "4.7.0",
+    "moment": "2.22.1",
+    "moment-timezone": "0.5.17",
+    "prop-types": "15.6.1",
+    "react": "16.4.0",
+    "react-intl": "2.4.0",
+    "react-required-if": "1.0.3",
+    "react-router-dom": "4.2.2",
+    "react-virtualized": "9.19.1",
+    "recompose": "0.26.0",
+    "styled-components": "3.2.6",
+    "warning": "3.0.0"
   }
 }
