--- a/package.json
+++ b/package.json
@@ -30,5 +30,19 @@
     "recompose": "0.26.0",
     "styled-components": "3.2.6",
     "warning": "3.0.0"
+  },
+  "devDependencies": {
+    "css-loader": "0.28.11",
+    "file-loader": "1.1.11",
+    "json-loader": "0.5.7",
+    "postcss": "6.0.22",
+    "postcss-cssnext": "3.1.0",
+    "postcss-import": "11.1.0",
+    "postcss-loader": "2.1.5",
+    "postcss-reporter": "5.0.0",
+    "style-loader": "0.21.0",
+    "svg-url-loader": "2.3.2",
+    "svgr": "1.8.1",
+    "url-loader": "1.0.1"
   }
 }
