--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@commercetools-local/utils": "*",
-    "classnames": "2.2.5",
+    "classnames": "2.2.6",
     "cleave.js": "1.3.3",
     "common-tags": "1.7.2",
     "dom-helpers": "3.3.1",
@@ -35,11 +35,13 @@
     "warning": "3.0.0"
   },
   "devDependencies": {
+    "@commercetools-frontend/babel-preset-mc-app": "1.0.0",
     "@storybook/addon-actions": "3.4.6",
     "@storybook/addon-info": "3.4.6",
     "@storybook/addon-knobs": "3.4.6",
     "@storybook/addon-options": "3.4.6",
     "@storybook/react": "3.4.6",
+    "babel-loader": "8.0.0-beta.3",
     "common-tags": "1.8.0",
     "css": "2.2.3",
     "css-loader": "0.28.11",
