--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@commercetools-frontend/ui-kit",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.0",
   "description": "UI component library to build MC applications",
   "license": "MIT",
   "private": false,
@@ -18,8 +18,8 @@
     "common-tags": "1.8.0",
     "dom-helpers": "3.3.1",
     "flatpickr": "4.5.0",
-    "is-touch-device": "1.0.1",
     "invariant": "2.2.4",
+    "is-touch-device": "1.0.1",
     "lodash.isfinite": "3.3.2",
     "lodash.isnil": "4.0.0",
     "lodash.isundefined": "3.0.1",
@@ -39,7 +39,7 @@
     "warning": "3.0.0"
   },
   "devDependencies": {
-    "@commercetools-frontend/babel-preset-mc-app": "1.0.0",
+    "@commercetools-frontend/babel-preset-mc-app": "1.0.0-beta.0",
     "@storybook/addon-actions": "3.4.7",
     "@storybook/addon-info": "3.4.7",
     "@storybook/addon-knobs": "3.4.7",
