--- a/package.json
+++ b/package.json
@@ -42,33 +42,22 @@
     "warning": "3.0.0"
   },
   "devDependencies": {
-    "@commercetools-frontend/babel-preset-mc-app": "1.0.0-beta.10",
+    "@commercetools-frontend/mc-scripts": "1.0.0-beta.10",
     "@storybook/addon-actions": "3.4.7",
     "@storybook/addon-info": "3.4.7",
     "@storybook/addon-knobs": "3.4.7",
     "@storybook/addon-options": "3.4.7",
     "@storybook/react": "3.4.7",
     "@svgr/webpack": "2.0.0",
-    "babel-loader": "8.0.0-beta.3",
     "common-tags": "1.8.0",
     "css": "2.2.3",
-    "css-loader": "0.28.11",
-    "file-loader": "1.1.11",
     "glob": "7.1.2",
-    "json-loader": "0.5.7",
+    "html-loader": "0.5.5",
     "lodash.camelcase": "4.3.0",
     "lodash.upperfirst": "4.3.1",
-    "null-loader": "0.1.1",
-    "postcss": "6.0.22",
-    "postcss-cssnext": "3.1.0",
-    "postcss-import": "11.1.0",
-    "postcss-loader": "2.1.5",
-    "postcss-reporter": "5.0.0",
+    "markdown-loader": "3.0.0",
     "prettier": "1.13.7",
     "rcfile": "1.0.3",
-    "storybook-readme": "3.3.0",
-    "style-loader": "0.21.0",
-    "svg-url-loader": "2.3.2",
-    "url-loader": "1.0.1"
+    "storybook-readme": "3.3.0"
   }
 }
