--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
   },
   "devDependencies": {
     "@commercetools-frontend/mc-scripts": "1.0.0-beta.10",
-    "@storybook/addon-actions": "3.4.7",
-    "@storybook/addon-info": "3.4.7",
-    "@storybook/addon-knobs": "3.4.7",
-    "@storybook/addon-options": "3.4.7",
-    "@storybook/react": "3.4.7",
+    "@storybook/addon-actions": "4.0.0-alpha.13",
+    "@storybook/addon-info": "4.0.0-alpha.13",
+    "@storybook/addon-knobs": "4.0.0-alpha.13",
+    "@storybook/addon-options": "4.0.0-alpha.13",
+    "@storybook/react": "4.0.0-alpha.13",
     "@svgr/webpack": "2.0.0",
     "common-tags": "1.8.0",
     "css": "2.2.3",
