--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "start": "start-storybook -s . -p 9002"
   },
   "dependencies": {
+    "@storybook/addon-links": "3.4.8",
     "classnames": "2.2.6",
     "cleave.js": "1.3.8",
     "common-tags": "1.8.0",
     "dom-helpers": "3.3.1",
     "flatpickr": "4.5.1",
+    "formik": "1.0.2",
     "invariant": "2.2.4",
     "is-touch-device": "1.0.1",
     "lodash.has": "4.5.2",
@@ -36,6 +38,7 @@
     "react-intl": "2.4.0",
     "react-required-if": "1.0.3",
     "react-router-dom": "4.3.1",
+    "react-select": "2.0.0",
     "react-textarea-autosize": "7.0.2",
     "react-virtualized": "9.20.0",
     "recompose": "0.26.0",
