--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "flatpickr": "4.5.1",
     "invariant": "2.2.4",
     "is-touch-device": "1.0.1",
+    "lodash.has": "4.5.2",
     "lodash.isfinite": "3.3.2",
     "lodash.isnil": "4.0.0",
     "lodash.isundefined": "3.0.1",
