--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "warning": "4.0.2"
   },
   "devDependencies": {
+    "@commercetools-frontend/babel-preset-mc-app": "1.0.0-beta.29",
     "@commercetools-frontend/eslint-config-mc-app": "1.0.0-beta.29",
     "@commercetools-frontend/jest-preset-mc-app": "1.0.0-beta.29",
     "@commercetools-frontend/mc-scripts": "1.0.0-beta.29",
@@ -96,9 +97,11 @@
     "prettier": "1.14.2",
     "rcfile": "1.0.3",
     "react-dom": "16.4.2",
-    "storybook-readme": "3.3.0",
+    "storybook-readme": "4.0.0-beta1",
     "stylelint": "9.5.0",
     "stylelint-config-standard": "17.0.0",
-    "stylelint-order": "0.8.1"
+    "stylelint-order": "0.8.1",
+    "svg-url-loader": "2.3.2",
+    "url-loader": "1.1.1"
   }
 }
