--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "publishConfig": {
     "access": "public"
   },
+  "main": "src/index.js",
   "scripts": {
     "commitmsg": "commitlint -e $GIT_PARAMS",
     "precommit": "lint-staged",
