--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "access": "public"
   },
   "main": "src/index.js",
+  "module": "dist/ui-kit.esm.js",
   "scripts": {
     "commitmsg": "commitlint -e $GIT_PARAMS",
     "precommit": "lint-staged",
@@ -15,6 +16,7 @@
     "prebuild": "node ./scripts/generate-base-colors.js && node ./scripts/generate-base-shadows.js && node ./scripts/generate-colors-for-story.js",
     "prestart": "node ./scripts/generate-base-colors.js && node ./scripts/generate-base-shadows.js && node ./scripts/generate-colors-for-story.js",
     "build": "build-storybook -o .public",
+    "build:bundle": "rimraf ./dist && NODE_ENV=production rollup -c",
     "start": "start-storybook -p 9002",
     "i18n:build": "mc-scripts extract-intl --build-translations --output-path=$(pwd)/i18n 'src/components/**/!(*.spec).js'",
     "lint": "jest --projects jest.eslint.config.js jest.stylelint.config.js",
@@ -102,6 +104,16 @@
     "react-intl": "2.4.0",
     "react-router-dom": "4.3.1",
     "react-value": "0.2.0",
+    "rollup": "^0.65.0",
+    "rollup-plugin-babel": "^4.0.3",
+    "rollup-plugin-commonjs": "^9.1.6",
+    "rollup-plugin-json": "^3.0.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-postcss": "^1.6.2",
+    "rollup-plugin-svg": "^1.0.1",
+    "rollup-plugin-uglify": "^5.0.2",
+    "rollup-plugin-url": "^1.4.0",
     "storybook-readme": "4.0.0-beta1",
     "style-loader": "0.22.1",
     "stylelint": "9.5.0",
