--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@commercetools-frontend/ui-kit",
-  "version": "1.0.0-beta.30",
+  "version": "1.0.0-beta.30-pa3",
   "description": "UI component library based on our Design System",
   "license": "MIT",
   "private": false,
