chore: limit jest max-workers to 4
| Max Workers | Time to execute `yarn jest` | time reported by `jest` |
|--:----------|--:--------------------------|--:----------------------|
| no limit    | 232.03s                     | 222.364s                |
| 10          | 78.94s                      | 75.976s                 |
| 5           | 61.07s                      | 57.233s                 |
| 4           | 51.86s                      | 49.68s                  |
| 3           | 54.62s                      | 52.473s                 |
| 1           | 59.82ss                     | 57.792s                 |

See https://github.com/commercetools/ui-kit/pull/25#issuecomment-418688018

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,4 @@ cache:
     - node_modules
 
 script:
-   - yarn run jest --projects jest.*.config.js
-
+    - yarn run jest --projects jest.*.config.js --maxWorkers=4
