--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
     "commitmsg": "commitlint -e $GIT_PARAMS",
     "precommit": "lint-staged",
     "prepublish": "node ./scripts/generate-icon-exports.js",
-    "prebuild": "node ./scripts/generate-base-colors.js && node ./scripts/generate-base-shadows.js && node ./scripts/generate-colors-for-story.js",
-    "prestart": "node ./scripts/generate-base-colors.js && node ./scripts/generate-base-shadows.js && node ./scripts/generate-colors-for-story.js",
-    "build": "build-storybook -o .public",
-    "start": "start-storybook -p 9002",
+    "prestorybook:build": "node ./scripts/generate-base-colors.js && node ./scripts/generate-base-shadows.js && node ./scripts/generate-colors-for-story.js",
+    "prestorybook:start": "node ./scripts/generate-base-colors.js && node ./scripts/generate-base-shadows.js && node ./scripts/generate-colors-for-story.js",
+    "build": "NODE_ENV=production webpack --config webpack.config.js",
+    "start": "yarn storybook:start",
+    "storybook:start": "start-storybook -p 9002",
+    "storybook:build": "build-storybook -o .public",
     "i18n:build": "mc-scripts extract-intl --build-translations --output-path=$(pwd)/i18n 'src/components/**/!(*.spec).js'",
     "lint": "jest --projects jest.eslint.config.js jest.stylelint.config.js",
     "lint:js": "jest --config jest.eslint.config.js",
@@ -67,7 +69,9 @@
     "@svgr/webpack": "2.2.1",
     "babel-loader": "8.0.2",
     "browserslist": "4.0.2",
+    "clean-webpack-plugin": "0.1.19",
     "common-tags": "1.8.0",
+    "copy-webpack-plugin": "4.5.2",
     "css": "2.2.3",
     "css-loader": "1.0.0",
     "enzyme": "3.5.0",
@@ -88,6 +92,7 @@
     "moment": "2.22.2",
     "moment-timezone": "0.5.21",
     "omit-empty": "0.4.1",
+    "peer-deps-externals-webpack-plugin": "1.0.4",
     "postcss": "7.0.2",
     "postcss-color-mod-function": "2.4.3",
     "postcss-import": "12.0.0",
@@ -108,8 +113,8 @@
     "stylelint-config-standard": "17.0.0",
     "stylelint-order": "0.8.1",
     "svg-url-loader": "2.3.2",
-    "thread-loader": "1.2.0",
-    "url-loader": "1.1.1"
+    "url-loader": "1.1.1",
+    "webpack-cli": "3.1.0"
   },
   "peerDependencies": {
     "moment": ">2.2",
