--- a/package.json
+++ b/package.json
@@ -91,11 +91,13 @@
     "moment-timezone": "0.5.21",
     "omit-empty": "0.4.1",
     "postcss": "7.0.2",
-    "postcss-color-mod-function": "2.4.3",
-    "postcss-import": "12.0.0",
+    "postcss-color-mod-function": "^2.4.3",
+    "postcss-custom-media": "^6.0.0",
+    "postcss-custom-properties": "^7.0.0",
+    "postcss-import": "^12.0.0",
     "postcss-loader": "3.0.0",
-    "postcss-preset-env": "5.3.0",
-    "postcss-reporter": "5.0.0",
+    "postcss-preset-env": "^5.3.0",
+    "postcss-reporter": "^6.0.0",
     "postcss-safe-parser": "4.0.1",
     "prettier": "1.14.2",
     "rcfile": "1.0.3",
@@ -110,6 +112,7 @@
     "rollup-plugin-json": "^3.0.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.2",
     "rollup-plugin-svg": "^1.0.1",
     "rollup-plugin-uglify": "^5.0.2",
