--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "test:watch": "jest --config jest.test.config.js --watch"
   },
   "dependencies": {
+    "@svgr/rollup": "^2.3.0",
     "classnames": "2.2.6",
     "common-tags": "1.8.0",
     "dom-helpers": "3.3.1",
@@ -48,7 +49,7 @@
     "react-required-if": "1.0.3",
     "react-select": "2.0.0",
     "react-textarea-autosize": "7.0.2",
-    "react-virtualized": "9.20.0",
+    "react-virtualized": "9.20.1",
     "recompose": "0.26.0",
     "reselect": "3.0.1",
     "styled-components": "3.3.3",
