chore(build-process): dep cleanup"

--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "test:watch": "jest --config jest.test.config.js --watch"
   },
   "dependencies": {
-    "@svgr/rollup": "^2.3.0",
     "classnames": "2.2.6",
     "common-tags": "1.8.0",
     "dom-helpers": "3.3.1",
@@ -67,6 +66,7 @@
     "@storybook/addon-links": "4.0.0-alpha.20",
     "@storybook/addon-options": "4.0.0-alpha.20",
     "@storybook/react": "4.0.0-alpha.20",
+    "@svgr/rollup": "2.3.0",
     "@svgr/webpack": "2.2.1",
     "babel-loader": "8.0.2",
     "browserslist": "4.0.2",
@@ -107,17 +107,17 @@
     "react-intl": "2.4.0",
     "react-router-dom": "4.3.1",
     "react-value": "0.2.0",
-    "rollup": "^0.65.0",
-    "rollup-plugin-babel": "^4.0.3",
-    "rollup-plugin-commonjs": "^9.1.6",
-    "rollup-plugin-json": "^3.0.0",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-postcss": "^1.6.2",
-    "rollup-plugin-svg": "^1.0.1",
-    "rollup-plugin-uglify": "^5.0.2",
-    "rollup-plugin-url": "^1.4.0",
+    "rollup": "0.65.0",
+    "rollup-plugin-babel": "4.0.3",
+    "rollup-plugin-commonjs": "9.1.6",
+    "rollup-plugin-json": "3.0.0",
+    "rollup-plugin-node-builtins": "2.1.2",
+    "rollup-plugin-node-resolve": "3.4.0",
+    "rollup-plugin-peer-deps-external": "2.2.0",
+    "rollup-plugin-postcss": "1.6.2",
+    "rollup-plugin-svg": "1.0.1",
+    "rollup-plugin-uglify": "5.0.2",
+    "rollup-plugin-url": "1.4.0",
     "storybook-readme": "4.0.0-beta1",
     "style-loader": "0.22.1",
     "stylelint": "9.5.0",
