--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "rollup": "0.65.0",
     "rollup-plugin-babel": "4.0.3",
     "rollup-plugin-commonjs": "9.1.6",
+    "rollup-plugin-copy": "^0.2.3",
     "rollup-plugin-json": "3.0.0",
     "rollup-plugin-node-builtins": "2.1.2",
     "rollup-plugin-node-resolve": "3.4.0",
