chore(build-process): add cjs module and script fixups
Add cjs module export, rearrange npm scripts, fix for namespace exports, add cleanup rollup plugin,
and copy files and folders to dist.

--- a/package.json
+++ b/package.json
@@ -7,17 +7,18 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "src/index.js",
-  "module": "dist/ui-kit.esm.js",
+  "main": "ui-kit.cjs.js",
+  "module": "ui-kit.esm.js",
   "scripts": {
     "commitmsg": "commitlint -e $GIT_PARAMS",
     "precommit": "lint-staged",
     "prepublish": "node ./scripts/generate-icon-exports.js",
     "prebuild": "node ./scripts/generate-base-colors.js && node ./scripts/generate-base-shadows.js && node ./scripts/generate-colors-for-story.js",
-    "prestart": "node ./scripts/generate-base-colors.js && node ./scripts/generate-base-shadows.js && node ./scripts/generate-colors-for-story.js",
-    "build": "build-storybook -o .public",
-    "build:bundle": "rimraf ./dist && NODE_ENV=production rollup -c",
-    "start": "start-storybook -p 9002",
+    "predemo:start": "node ./scripts/generate-base-colors.js && node ./scripts/generate-base-shadows.js && node ./scripts/generate-colors-for-story.js",
+    "demo:build": "build-storybook -o .public",
+    "build": "NODE_ENV=production rollup -c && cp -r package.json README.md LICENSE materials proxy-exports/ dist/",
+    "start": "yarn demo:start",
+    "demo:start": "start-storybook -p 9002",
     "i18n:build": "mc-scripts extract-intl --build-translations --output-path=$(pwd)/i18n 'src/components/**/!(*.spec).js'",
     "lint": "jest --projects jest.eslint.config.js jest.stylelint.config.js",
     "lint:js": "jest --config jest.eslint.config.js",
@@ -109,8 +110,8 @@
     "react-value": "0.2.0",
     "rollup": "0.65.0",
     "rollup-plugin-babel": "4.0.3",
+    "rollup-plugin-cleaner": "^0.2.0",
     "rollup-plugin-commonjs": "9.1.6",
-    "rollup-plugin-copy": "^0.2.3",
     "rollup-plugin-json": "3.0.0",
     "rollup-plugin-node-builtins": "2.1.2",
     "rollup-plugin-node-resolve": "3.4.0",
