chore: copy files from rollup

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "prebuild": "node ./scripts/generate-base-colors.js && node ./scripts/generate-base-shadows.js && node ./scripts/generate-colors-for-story.js",
     "predemo:start": "node ./scripts/generate-base-colors.js && node ./scripts/generate-base-shadows.js && node ./scripts/generate-colors-for-story.js",
     "demo:build": "build-storybook -o .public",
-    "build": "NODE_ENV=production rollup -c && cp -r package.json README.md LICENSE materials proxy-exports/ dist/",
+    "build": "NODE_ENV=production rollup -c",
     "start": "yarn demo:start",
     "demo:start": "start-storybook -p 9002",
     "i18n:build": "mc-scripts extract-intl --build-translations --output-path=$(pwd)/i18n 'src/components/**/!(*.spec).js'",
@@ -112,6 +112,7 @@
     "rollup-plugin-babel": "4.0.3",
     "rollup-plugin-cleaner": "^0.2.0",
     "rollup-plugin-commonjs": "9.1.6",
+    "rollup-plugin-execute": "1.0.0",
     "rollup-plugin-json": "3.0.0",
     "rollup-plugin-node-builtins": "2.1.2",
     "rollup-plugin-node-resolve": "3.4.0",
