chore: rename demo to storybook in scripts

--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "precommit": "lint-staged",
     "prepublish": "node ./scripts/generate-icon-exports.js",
     "prebuild": "node ./scripts/generate-base-colors.js && node ./scripts/generate-base-shadows.js && node ./scripts/generate-colors-for-story.js",
-    "predemo:start": "node ./scripts/generate-base-colors.js && node ./scripts/generate-base-shadows.js && node ./scripts/generate-colors-for-story.js",
-    "demo:build": "build-storybook -o .public",
+    "prestorybook:start": "node ./scripts/generate-base-colors.js && node ./scripts/generate-base-shadows.js && node ./scripts/generate-colors-for-story.js",
+    "storybook:build": "build-storybook -o .public",
     "build": "NODE_ENV=production rollup -c",
-    "start": "yarn demo:start",
-    "demo:start": "start-storybook -p 9002",
+    "start": "yarn storybook:start",
+    "storybook:start": "start-storybook -p 9002",
     "i18n:build": "mc-scripts extract-intl --build-translations --output-path=$(pwd)/i18n 'src/components/**/!(*.spec).js'",
     "lint": "jest --projects jest.eslint.config.js jest.stylelint.config.js",
     "lint:js": "jest --config jest.eslint.config.js",
