--- a/package.json
+++ b/package.json
@@ -93,13 +93,13 @@
     "moment-timezone": "0.5.21",
     "omit-empty": "0.4.1",
     "postcss": "7.0.2",
-    "postcss-color-mod-function": "^2.4.3",
-    "postcss-custom-media": "^6.0.0",
-    "postcss-custom-properties": "^7.0.0",
-    "postcss-import": "^12.0.0",
+    "postcss-color-mod-function": "2.4.3",
+    "postcss-custom-media": "6.0.0",
+    "postcss-custom-properties": "7.0.0",
+    "postcss-import": "12.0.0",
     "postcss-loader": "3.0.0",
-    "postcss-preset-env": "^5.3.0",
-    "postcss-reporter": "^6.0.0",
+    "postcss-preset-env": "5.3.0",
+    "postcss-reporter": "6.0.0",
     "postcss-safe-parser": "4.0.1",
     "prettier": "1.14.2",
     "rcfile": "1.0.3",
@@ -110,7 +110,7 @@
     "react-value": "0.2.0",
     "rollup": "0.65.0",
     "rollup-plugin-babel": "4.0.3",
-    "rollup-plugin-cleaner": "^0.2.0",
+    "rollup-plugin-cleaner": "0.2.0",
     "rollup-plugin-commonjs": "9.1.6",
     "rollup-plugin-execute": "1.0.0",
     "rollup-plugin-json": "3.0.0",
@@ -118,7 +118,6 @@
     "rollup-plugin-node-resolve": "3.4.0",
     "rollup-plugin-peer-deps-external": "2.2.0",
     "rollup-plugin-postcss": "1.6.2",
-    "rollup-plugin-svg": "1.0.1",
     "rollup-plugin-uglify": "5.0.2",
     "rollup-plugin-url": "1.4.0",
     "storybook-readme": "4.0.0-beta1",
@@ -126,7 +125,6 @@
     "stylelint": "9.5.0",
     "stylelint-config-standard": "17.0.0",
     "stylelint-order": "0.8.1",
-    "svg-url-loader": "2.3.2",
     "url-loader": "1.1.1"
   },
   "peerDependencies": {
