chore(build-systems): add cross-env for node-env setting

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "prebuild": "node ./scripts/generate-base-colors.js && node ./scripts/generate-base-shadows.js && node ./scripts/generate-colors-for-story.js",
     "prestorybook:start": "node ./scripts/generate-base-colors.js && node ./scripts/generate-base-shadows.js && node ./scripts/generate-colors-for-story.js",
     "storybook:build": "build-storybook -o .public",
-    "build": "NODE_ENV=production rollup -c",
+    "build": "cross-env NODE_ENV=production rollup -c",
     "start": "yarn storybook:start",
     "storybook:start": "start-storybook -p 9002",
     "i18n:build": "mc-scripts extract-intl --build-translations --output-path=$(pwd)/i18n 'src/components/**/!(*.spec).js'",
@@ -72,6 +72,7 @@
     "babel-loader": "8.0.2",
     "browserslist": "4.0.2",
     "common-tags": "1.8.0",
+    "cross-env": "^5.2.0",
     "css": "2.2.3",
     "css-loader": "1.0.0",
     "enzyme": "3.5.0",
