--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "lint:js": "jest --config jest.eslint.config.js",
     "lint:css": "jest --config jest.stylelint.config.js",
     "format": "npm run format:js && npm run format:css & npm run format:md",
-    "format:js": "prettier --write '{src,scripts,examples,.storybook}/**/*.js'",
-    "format:css": "prettier --parser postcss --write '{src}/**/*.css'",
-    "format:md": "prettier --parser markdown --write '{.github,src,examples}/**/*.md'",
+    "format:js": "prettier --write '{.storybook,examples,scripts,src}/**/*.js' *.js",
+    "format:css": "prettier --write --parser css '{.storybook,examples,src}/**/*.css'",
+    "format:md": "prettier --write --parser markdown '{.github,.storybook,examples,src}/**/*.md' *.md",
     "test": "jest --config jest.test.config.js",
     "test:watch": "jest --config jest.test.config.js --watch"
   },
