--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "rollup-plugin-node-resolve": "3.4.0",
     "rollup-plugin-peer-deps-external": "2.2.0",
     "rollup-plugin-postcss": "1.6.2",
+    "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-uglify": "5.0.2",
     "rollup-plugin-url": "1.4.0",
     "storybook-readme": "4.0.0-beta1",
