--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "lint-staged": "7.2.2",
     "lodash.camelcase": "4.3.0",
     "lodash.mapvalues": "4.6.0",
+    "lodash.pick": "4.4.0",
     "lodash.upperfirst": "4.3.1",
     "markdown-loader": "3.0.0",
     "moment": "2.22.2",
@@ -122,6 +123,7 @@
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-uglify": "5.0.2",
     "rollup-plugin-url": "1.4.0",
+    "shelljs": "0.8.2",
     "storybook-readme": "4.0.0-beta1",
     "style-loader": "0.22.1",
     "stylelint": "9.5.0",
