build: reduce bundle size

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "prebuild": "node ./scripts/generate-base-colors.js && node ./scripts/generate-base-shadows.js && node ./scripts/generate-colors-for-story.js",
     "prestorybook:start": "node ./scripts/generate-base-colors.js && node ./scripts/generate-base-shadows.js && node ./scripts/generate-colors-for-story.js",
     "storybook:build": "build-storybook -o .public",
-    "build": "cross-env NODE_ENV=production rollup -c",
+    "build": "rimraf dist && cross-env NODE_ENV=production rollup -c",
+    "build:dev": "rimraf dist && cross-env NODE_ENV=development rollup -c",
     "start": "yarn storybook:start",
     "storybook:start": "start-storybook -p 9002",
     "i18n:build": "mc-scripts extract-intl --build-translations --output-path=$(pwd)/i18n 'src/components/**/!(*.spec).js'",
@@ -42,13 +43,13 @@
     "lodash.flatmap": "4.5.0",
     "lodash.has": "4.5.2",
     "lodash.isnil": "4.0.0",
+    "lodash.mapvalues": "4.6.0",
     "lodash.omit": "4.5.0",
     "lodash.sortby": "4.7.0",
     "lodash.uniq": "4.5.0",
     "lodash.without": "4.4.0",
     "prop-types": "15.6.2",
     "react-required-if": "1.0.3",
-    "react-select": "2.0.0",
     "react-textarea-autosize": "7.0.2",
     "react-virtualized": "9.20.1",
     "recompose": "0.26.0",
@@ -89,7 +90,6 @@
     "jest-runner-stylelint": "1.0.0",
     "lint-staged": "7.2.2",
     "lodash.camelcase": "4.3.0",
-    "lodash.mapvalues": "4.6.0",
     "lodash.pick": "4.4.0",
     "lodash.upperfirst": "4.3.1",
     "markdown-loader": "3.0.0",
@@ -111,10 +111,12 @@
     "react-dom": "16.4.2",
     "react-intl": "2.4.0",
     "react-router-dom": "4.3.1",
+    "react-select": "2.0.0",
     "react-value": "0.2.0",
+    "rimraf": "2.6.2",
     "rollup": "0.65.0",
     "rollup-plugin-babel": "4.0.3",
-    "rollup-plugin-cleaner": "0.2.0",
+    "rollup-plugin-cleanup": "3.0.0",
     "rollup-plugin-commonjs": "9.1.6",
     "rollup-plugin-execute": "1.0.0",
     "rollup-plugin-json": "3.0.0",
@@ -139,6 +141,7 @@
     "react": ">=16",
     "react-dom": ">=16",
     "react-intl": ">=2",
-    "react-router-dom": ">=4"
+    "react-router-dom": ">=4",
+    "react-select": ">=2"
   }
 }
