chore: explicitly whitelist .mod.css files in the files list

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dist",
     "i18n",
     "images",
-    "materials",
+    "materials/*.mod.css",
+    "materials/**/*.mod.css",
     "CHANGELOG.md",
     "README.md",
     "LICENSE",
