chore(netlify): assign yarn env vars

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,6 @@
   command = "yarn storybook:build"
   publish = ".public"
 
+[build.environment]
+  YARN_FLAGS = "--pure-lockfile"
+  YARN_VERSION = "1.9.4"
