--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@commercetools-frontend/ui-kit",
   "version": "2.0.0-rc.4",
   "description": "UI component library based on our Design System",
+  "homepage": "https://uikit.commercetools.com/",
   "license": "MIT",
   "private": false,
   "publishConfig": {
