--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "2.0.0-rc.4",
   "description": "UI component library based on our Design System",
   "homepage": "https://uikit.commercetools.com/",
+  "bugs": "https://github.com/commercetools/ui-kit/issues",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/commercetools/ui-kit.git"
+  },
   "license": "MIT",
   "private": false,
   "publishConfig": {
