--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "jest-plugin-filename": "0.0.1",
     "jest-runner-eslint": "0.6.0",
     "jest-runner-stylelint": "1.0.0",
+    "jest-silent-reporter": "0.1.1",
     "lint-staged": "7.2.2",
     "lodash.camelcase": "4.3.0",
     "lodash.pick": "4.4.0",
