--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "html-loader": "0.5.5",
     "husky": "0.14.3",
     "jest": "23.5.0",
+    "jest-dom": "1.12.1",
     "jest-plugin-filename": "0.0.1",
     "jest-runner-eslint": "0.6.0",
     "jest-runner-stylelint": "1.0.0",
@@ -136,6 +137,7 @@
     "react-dom": "16.4.2",
     "react-intl": "2.4.0",
     "react-router-dom": "4.3.1",
+    "react-testing-library": "5.1.0",
     "react-value": "0.2.0",
     "rimraf": "2.6.2",
     "rollup": "0.65.0",
