--- a/package.json
+++ b/package.json
@@ -60,8 +60,6 @@
     "dom-helpers": "3.3.1",
     "downshift": "2.2.2",
     "flatpickr": "4.5.2",
-    "graphql": "^0.13.0",
-    "graphql-tag": "^2.0.0",
     "invariant": "2.2.4",
     "is-touch-device": "1.0.1",
     "lodash.flatmap": "4.5.0",
@@ -83,7 +81,8 @@
     "warning": "4.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-transform-react-constant-elements": "7.0.0",
     "@commercetools-frontend/babel-preset-mc-app": "1.0.0-beta.32",
     "@commercetools-frontend/eslint-config-mc-app": "1.0.0-beta.32",
     "@commercetools-frontend/jest-preset-mc-app": "1.0.0-beta.32",
@@ -109,6 +108,8 @@
     "enzyme": "3.6.0",
     "eslint": "5.3.0",
     "formik": "1.3.0",
+    "graphql": "0.13.2",
+    "graphql-tag": "2.9.2",
     "glob": "7.1.3",
     "html-loader": "0.5.5",
     "husky": "0.14.3",
