--- a/package.json
+++ b/package.json
@@ -81,6 +81,8 @@
     "warning": "4.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-transform-react-constant-elements": "7.0.0",
     "@commercetools-frontend/babel-preset-mc-app": "1.0.0-beta.32",
     "@commercetools-frontend/eslint-config-mc-app": "1.0.0-beta.32",
     "@commercetools-frontend/jest-preset-mc-app": "1.0.0-beta.32",
@@ -96,6 +98,7 @@
     "@svgr/rollup": "2.4.1",
     "@svgr/webpack": "2.4.1",
     "babel-loader": "8.0.4",
+    "babel-plugin-transform-dynamic-import": "2.1.0",
     "browserslist": "4.1.1",
     "common-tags": "1.8.0",
     "conventional-changelog-cli": "2.0.5",
@@ -105,6 +108,8 @@
     "enzyme": "3.6.0",
     "eslint": "5.3.0",
     "formik": "1.3.0",
+    "graphql": "0.13.2",
+    "graphql-tag": "2.9.2",
     "glob": "7.1.3",
     "html-loader": "0.5.5",
     "husky": "0.14.3",
@@ -114,6 +119,7 @@
     "jest-runner-eslint": "0.6.0",
     "jest-runner-stylelint": "1.0.0",
     "jest-silent-reporter": "0.1.1",
+    "jest-validate": "^23.6.0",
     "lint-staged": "7.3.0",
     "lodash.camelcase": "4.3.0",
     "lodash.pick": "4.4.0",
@@ -122,6 +128,7 @@
     "moment": "2.22.2",
     "moment-timezone": "0.5.21",
     "omit-empty": "0.4.1",
+    "pegjs": "^0.10.0",
     "postcss": "7.0.2",
     "postcss-color-mod-function": "3.0.3",
     "postcss-custom-media": "7.0.4",
@@ -157,7 +164,8 @@
     "stylelint": "9.5.0",
     "stylelint-config-standard": "18.2.0",
     "stylelint-order": "1.0.0",
-    "url-loader": "1.1.1"
+    "url-loader": "1.1.1",
+    "webpack": "^4.20.2"
   },
   "peerDependencies": {
     "moment": ">2.2",
