--- a/package.json
+++ b/package.json
@@ -109,6 +109,8 @@
     "eslint": "5.3.0",
     "formik": "1.3.0",
     "glob": "7.1.3",
+    "graphql": "0.13.2",
+    "graphql-tag": "2.9.2",
     "html-loader": "0.5.5",
     "husky": "0.14.3",
     "jest": "23.6.0",
