--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "start": "yarn storybook:start",
     "storybook:start": "start-storybook -p 9002",
     "docs:publish": "node scripts/publish-docs.js",
-    "i18n:build": "mc-scripts extract-intl --build-translations --output-path=$(pwd)/i18n 'src/components/**/!(*.spec).js'",
+    "i18n:build": "node scripts/extract-intl.js --output-path=$(pwd)/i18n 'src/components/**/!(*.spec).js'",
     "lint": "jest --projects jest.eslint.config.js jest.stylelint.config.js",
     "lint:js": "jest --config jest.eslint.config.js",
     "lint:css": "jest --config jest.stylelint.config.js",
@@ -86,7 +86,6 @@
     "@commercetools-frontend/babel-preset-mc-app": "1.0.0-beta.32",
     "@commercetools-frontend/eslint-config-mc-app": "1.0.0-beta.32",
     "@commercetools-frontend/jest-preset-mc-app": "1.0.0-beta.32",
-    "@commercetools-frontend/mc-scripts": "1.0.0-beta.32",
     "@commitlint/cli": "7.1.2",
     "@commitlint/config-conventional": "7.1.2",
     "@storybook/addon-actions": "4.0.0-alpha.20",
@@ -98,6 +97,7 @@
     "@svgr/rollup": "2.4.1",
     "@svgr/webpack": "2.4.1",
     "babel-loader": "8.0.4",
+    "babel-plugin-react-intl": "3.0.1",
     "babel-plugin-transform-dynamic-import": "2.1.0",
     "browserslist": "4.1.1",
     "common-tags": "1.8.0",
@@ -108,9 +108,9 @@
     "enzyme": "3.6.0",
     "eslint": "5.3.0",
     "formik": "1.3.0",
+    "glob": "7.1.3",
     "graphql": "0.13.2",
     "graphql-tag": "2.9.2",
-    "glob": "7.1.3",
     "html-loader": "0.5.5",
     "husky": "0.14.3",
     "jest": "23.6.0",
@@ -127,6 +127,7 @@
     "markdown-loader": "4.0.0",
     "moment": "2.22.2",
     "moment-timezone": "0.5.21",
+    "mri": "1.1.1",
     "omit-empty": "0.4.1",
     "pegjs": "0.10.0",
     "postcss": "7.0.2",
