feat(build-process): move babel preset to internal script

--- a/package.json
+++ b/package.json
@@ -74,8 +74,13 @@
   },
   "devDependencies": {
     "@babel/core": "7.1.2",
+    "@babel/plugin-proposal-do-expressions": "7.0.0",
+    "@babel/plugin-proposal-export-default-from": "7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "7.0.0",
+    "@babel/plugin-transform-destructuring": "7.1.2",
     "@babel/plugin-transform-react-constant-elements": "7.0.0",
-    "@commercetools-frontend/babel-preset-mc-app": "1.0.0-beta.32",
     "@commercetools-frontend/eslint-config-mc-app": "1.0.0-beta.32",
     "@commercetools-frontend/jest-preset-mc-app": "1.0.0-beta.32",
     "@commitlint/cli": "7.2.1",
