--- a/package.json
+++ b/package.json
@@ -155,6 +155,7 @@
     "rollup-plugin-peer-deps-external": "2.2.0",
     "rollup-plugin-postcss": "1.6.2",
     "rollup-plugin-replace": "2.0.0",
+    "rollup-plugin-size-snapshot": "0.7.0",
     "rollup-plugin-url": "2.0.0",
     "shelljs": "0.8.2",
     "storybook-readme": "4.0.0-beta1",
