--- a/package.json
+++ b/package.json
@@ -34,8 +34,6 @@
     "react"
   ],
   "scripts": {
-    "commitmsg": "commitlint -e $GIT_PARAMS",
-    "precommit": "lint-staged",
     "changelog": "conventional-changelog -p angular -u",
     "prebuild": "node ./scripts/generate-icon-exports.js && node ./scripts/generate-base-colors.js && node ./scripts/generate-base-shadows.js && node ./scripts/generate-colors-for-story.js",
     "prestorybook:start": "node ./scripts/generate-base-colors.js && node ./scripts/generate-base-shadows.js && node ./scripts/generate-colors-for-story.js",
@@ -58,7 +56,7 @@
     "classnames": "2.2.6",
     "common-tags": "1.8.0",
     "dom-helpers": "3.3.1",
-    "downshift": "2.2.2",
+    "downshift": "2.2.3",
     "flatpickr": "4.5.2",
     "invariant": "2.2.4",
     "is-touch-device": "1.0.1",
@@ -72,11 +70,10 @@
     "lodash.without": "4.4.0",
     "prop-types": "15.6.2",
     "react-required-if": "1.0.3",
-    "react-select": "2.0.0",
+    "react-select": "2.1.0",
     "react-textarea-autosize": "7.0.4",
     "react-virtualized": "9.20.1",
     "recompose": "0.30.0",
-    "reselect": "3.0.1",
     "styled-components": "3.4.9",
     "warning": "4.0.2"
   },
@@ -94,12 +91,12 @@
     "@storybook/addon-links": "4.0.0-alpha.20",
     "@storybook/addon-options": "4.0.0-alpha.20",
     "@storybook/react": "4.0.0-alpha.20",
-    "@svgr/rollup": "2.4.1",
-    "@svgr/webpack": "2.4.1",
+    "@svgr/rollup": "3.0.0",
+    "@svgr/webpack": "3.0.0",
     "babel-loader": "8.0.4",
     "babel-plugin-react-intl": "3.0.1",
     "babel-plugin-transform-dynamic-import": "2.1.0",
-    "browserslist": "4.1.1",
+    "browserslist": "4.1.2",
     "common-tags": "1.8.0",
     "conventional-changelog-cli": "2.0.5",
     "cross-env": "5.2.0",
@@ -107,14 +104,14 @@
     "css-loader": "1.0.0",
     "enzyme": "3.6.0",
     "eslint": "5.3.0",
-    "formik": "1.3.0",
+    "formik": "1.3.1",
     "glob": "7.1.3",
-    "graphql": "0.13.2",
-    "graphql-tag": "2.9.2",
+    "graphql": "14.0.2",
+    "graphql-tag": "2.10.0",
     "html-loader": "0.5.5",
-    "husky": "0.14.3",
+    "husky": "1.1.0",
     "jest": "23.6.0",
-    "jest-dom": "1.12.1",
+    "jest-dom": "2.0.2",
     "jest-plugin-filename": "0.0.1",
     "jest-runner-eslint": "0.6.0",
     "jest-runner-stylelint": "1.0.0",
@@ -130,25 +127,25 @@
     "mri": "1.1.1",
     "omit-empty": "0.4.1",
     "pegjs": "0.10.0",
-    "postcss": "7.0.2",
+    "postcss": "7.0.5",
     "postcss-color-mod-function": "3.0.3",
     "postcss-custom-media": "7.0.4",
-    "postcss-custom-properties": "8.0.5",
+    "postcss-custom-properties": "8.0.8",
     "postcss-import": "12.0.0",
     "postcss-loader": "3.0.0",
-    "postcss-preset-env": "6.0.6",
+    "postcss-preset-env": "6.0.10",
     "postcss-reporter": "6.0.0",
     "postcss-safe-parser": "4.0.1",
     "prettier": "1.14.3",
     "rcfile": "1.0.3",
     "react": "16.5.2",
     "react-dom": "16.5.2",
-    "react-intl": "2.6.0",
+    "react-intl": "2.7.0",
     "react-router-dom": "4.3.1",
-    "react-testing-library": "5.1.0",
+    "react-testing-library": "5.1.1",
     "react-value": "0.2.0",
     "rimraf": "2.6.2",
-    "rollup": "0.66.2",
+    "rollup": "0.66.4",
     "rollup-plugin-babel": "4.0.3",
     "rollup-plugin-cleanup": "3.0.0",
     "rollup-plugin-commonjs": "9.1.8",
@@ -158,11 +155,11 @@
     "rollup-plugin-peer-deps-external": "2.2.0",
     "rollup-plugin-postcss": "1.6.2",
     "rollup-plugin-replace": "2.0.0",
-    "rollup-plugin-url": "1.4.0",
+    "rollup-plugin-url": "2.0.0",
     "shelljs": "0.8.2",
     "storybook-readme": "4.0.0-beta1",
     "style-loader": "0.23.0",
-    "stylelint": "9.5.0",
+    "stylelint": "9.6.0",
     "stylelint-config-standard": "18.2.0",
     "stylelint-order": "1.0.0",
     "url-loader": "1.1.1",
@@ -175,5 +172,11 @@
     "react-dom": ">=16",
     "react-intl": ">=2",
     "react-router-dom": ">=4"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS",
+      "pre-commit": "lint-staged"
+    }
   }
 }
