--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "test:bundle:watch": "jest --config jest.bundle.config.js --watch"
   },
   "dependencies": {
+    "chrono-node": "1.3.5",
     "classnames": "2.2.6",
     "common-tags": "1.8.0",
     "dom-helpers": "3.4.0",
