chore: use custom setup
This drops the @commercetools-frontend's application-kit presets in favor of custom setup. The preset is great when working on MC apps, but it gets in the way when developing ui-kit.

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -1,5 +1,33 @@
 ---
-extends: "@commercetools-frontend/eslint-config-mc-app"
+parser: babel-eslint
+parserOptions:
+  ecmaFeatures:
+    jsx: true
+  ecmaVersion: 8
+  sourceType: module
+extends:
+  - 'airbnb-base'
+  - 'plugin:jest/recommended'
+  - 'plugin:react/recommended'
+  - 'prettier'
+  - 'prettier/react'
+env:
+  browser: true
+  es6: true
+  jest: true
+  node: true
+  mocha: false
+plugins:
+  - 'import'
+  - 'jest'
+  - 'jsx-a11y'
+  - 'prettier'
+  - 'prefer-object-spread'
+  - 'react'
+overrides:
+  - files: ['*.spec.js']
+    rules:
+      'react/display-name': 0
 settings:
   import/ignore:
     # included by default, but replaced if explicitly configured
@@ -9,3 +37,61 @@ settings:
     # Because we export the whole namespace, the `import/ignore` rule can't find
     # the named exports. So we disable the rule for imports of that file.
     - test-utils.js
+
+rules:
+    'class-methods-use-this':
+      - 'error'
+      - exceptMethods: [
+          'render',
+          'getInitialState',
+          'getDefaultProps',
+          'getChildContext',
+          'shouldComponentUpdate',
+          'UNSAFE_componentWillMount',
+          'UNSAFE_componentWillReceiveProps',
+          'UNSAFE_componentWillUpdate',
+          'componentWillUnmount',
+          'componentDidMount',
+          'componentDidUpdate',
+        ]
+    'function-paren-newline': 0
+    'import/extensions': [
+      'error',
+      'always',
+      {
+        js: 'never',
+      },
+    ]
+    'import/no-extraneous-dependencies': 0
+    'import/no-named-as-default': 0
+    'import/no-unresolved': 0
+    'import/first': 0
+    'import/order': 2
+    'no-restricted-globals': ['error', 'find', 'name', 'location']
+    'no-warning-comments': 0
+    'no-use-before-define': [
+      'error',
+      {
+        functions: false,
+      },
+    ]
+    'no-underscore-dangle': 0
+    'jest/no-identical-title': 'warn'
+    'jest/no-focused-tests': 2
+    'react/jsx-uses-vars': 2
+    'react/wrap-multilines': 0
+    'react/no-deprecated': 'error'
+    'react/no-find-dom-node': 0
+    'react/display-name': [
+      1,
+      {
+        ignoreTranspilerName: true,
+      }
+    ]
+    'prefer-object-spread/prefer-object-spread': 2
+    'prefer-destructuring': 0
+    'prefer-promise-reject-errors': 'warn'
+    'react/jsx-no-target-blank': 0
+    'lines-between-class-members': 0
+    # NOTE: The regular rule does not support do-expressions. The equivalent rule of babel does.
+    'no-unused-expressions': 0
