--- a/package.json
+++ b/package.json
@@ -79,10 +79,10 @@
     "@babel/plugin-proposal-export-namespace-from": "7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "7.0.0",
     "@babel/plugin-proposal-optional-chaining": "7.0.0",
-    "@babel/plugin-transform-destructuring": "7.1.2",
+    "@babel/plugin-transform-destructuring": "7.1.3",
     "@babel/plugin-transform-react-constant-elements": "7.0.0",
-    "@commercetools-frontend/eslint-config-mc-app": "1.0.0-beta.32",
-    "@commercetools-frontend/jest-preset-mc-app": "1.0.0-beta.32",
+    "@commercetools/enzyme-extensions": "3.0.1",
+    "@commercetools/jest-enzyme-matchers": "1.1.2",
     "@commitlint/cli": "7.2.1",
     "@commitlint/config-conventional": "7.1.2",
     "@storybook/addon-actions": "4.0.0-alpha.20",
@@ -93,17 +93,34 @@
     "@storybook/react": "4.0.0-alpha.20",
     "@svgr/rollup": "3.1.0",
     "@svgr/webpack": "3.1.0",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "10.0.1",
+    "babel-jest": "23.6.0",
     "babel-loader": "8.0.4",
     "babel-plugin-react-intl": "3.0.1",
     "babel-plugin-transform-dynamic-import": "2.1.0",
+    "babel-plugin-transform-react-remove-prop-types": "0.4.19",
+    "babel-preset-jest": "23.2.0",
     "browserslist": "4.2.1",
+    "colors": "1.3.2",
     "common-tags": "1.8.0",
     "conventional-changelog-cli": "2.0.5",
     "cross-env": "5.2.0",
     "css": "2.2.4",
     "css-loader": "1.0.0",
     "enzyme": "3.7.0",
-    "eslint": "5.3.0",
+    "enzyme-adapter-react-16": "1.6.0",
+    "enzyme-to-json": "3.3.4",
+    "eslint": "5.7.0",
+    "eslint-config-airbnb-base": "13.1.0",
+    "eslint-config-prettier": "3.1.0",
+    "eslint-formatter-pretty": "1.3.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jest": "21.25.1",
+    "eslint-plugin-jsx-a11y": "6.1.2",
+    "eslint-plugin-prefer-object-spread": "1.2.1",
+    "eslint-plugin-prettier": "3.0.0",
+    "eslint-plugin-react": "7.11.1",
     "flatpickr": "4.5.2",
     "formik": "1.3.1",
     "glob": "7.1.3",
@@ -111,13 +128,17 @@
     "graphql-tag": "2.10.0",
     "html-loader": "0.5.5",
     "husky": "1.1.2",
+    "identity-obj-proxy": "3.0.0",
     "jest": "23.6.0",
     "jest-dom": "2.1.0",
+    "jest-enzyme": "7.0.0",
+    "jest-localstorage-mock": "2.2.0",
     "jest-plugin-filename": "0.0.1",
     "jest-runner-eslint": "0.6.0",
     "jest-runner-stylelint": "1.0.0",
     "jest-silent-reporter": "0.1.1",
     "jest-validate": "23.6.0",
+    "jest-watch-master": "1.0.0",
     "lint-staged": "7.3.0",
     "lodash.camelcase": "4.3.0",
     "lodash.pick": "4.4.0",
