--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,7 @@ typings/
 .idea
 .vscode
 !.vscode/settings.json
+
+
+# File used to fail tests on CI
+fail-tests-because-there-was-an-unhandled-rejection.lock
