--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -36,7 +36,10 @@ settings:
     # tests can do `import { render, fireEvent }` from '../test-utils'`.
     # Because we export the whole namespace, the `import/ignore` rule can't find
     # the named exports. So we disable the rule for imports of that file.
-    - test-utils.js
+    - test-utils.js  
+  react:
+    pragma: React
+    version: detect
 
 rules:
     'class-methods-use-this':
