--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "lint:js": "jest --config jest.eslint.config.js",
     "lint:css": "jest --config jest.stylelint.config.js",
     "format:js": "prettier --write '{.storybook,examples,materials,scripts,src}/**/*.js' *.js",
-    "format:css": "prettier --write --parser css '{.storybook,examples,materials,src}/**/*.css' materials/*.css",
+    "format:css": "prettier --write --parser css '{.storybook,examples,materials,src}/**/*.css' {.storybook,materials}/*.css",
     "format:md": "prettier --write --parser markdown '{.github,.storybook,examples,materials,src}/**/*.md' *.md",
     "test": "jest --config jest.test.config.js",
     "test:watch": "jest --config jest.test.config.js --watch"
