--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
     "postcss-color-mod-function": "3.0.3",
     "postcss-custom-media": "7.0.6",
     "postcss-custom-properties": "8.0.8",
+    "postcss-discard-comments": "4.0.1",
     "postcss-import": "12.0.0",
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.1.1",
