--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "test:watch": "jest --config jest.test.config.js --watch"
   },
   "dependencies": {
+    "@sindresorhus/string-hash": "1.0.0",
     "classnames": "2.2.6",
     "common-tags": "1.8.0",
     "dom-helpers": "3.3.1",
@@ -69,6 +70,7 @@
     "prop-types": "15.6.2",
     "react-required-if": "1.0.3",
     "recompose": "0.30.0",
+    "style-inject": "0.3.0",
     "tiny-invariant": "1.0.1",
     "warning": "4.0.2"
   },
@@ -202,8 +204,7 @@
     "react-router-dom": ">=4",
     "react-select": ">2.1.0",
     "react-textarea-autosize": ">7.0.0",
-    "react-virtualized": ">9.0.0",
-    "styled-components": ">3.4.0"
+    "react-virtualized": ">9.0.0"
   },
   "husky": {
     "hooks": {
