chore: rename materials exports to imports

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "dist",
     "i18n",
     "images",
-    "materials/materials.css",
-    "materials/materials.js",
+    "materials/imports.css",
+    "materials/imports.js",
     "materials/media-queries.mod.css",
     "CHANGELOG.md",
     "./README.md",
