chore: replace styled-components with react-emotion

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "lodash.uniq": "4.5.0",
     "lodash.without": "4.4.0",
     "prop-types": "15.6.2",
+    "react-emotion": "9.2.12",
     "react-required-if": "1.0.3",
     "recompose": "0.30.0",
     "tiny-invariant": "1.0.1",
@@ -187,7 +188,6 @@
     "shelljs": "0.8.2",
     "storybook-readme": "4.0.2",
     "style-loader": "0.23.1",
-    "styled-components": "4.0.2",
     "stylelint": "9.6.0",
     "stylelint-config-standard": "18.2.0",
     "stylelint-order": "1.0.0",
