feat: extract css variables to js and css files (#181)
* feat: extract css variables to js and css files

* feat: move internal materials internal

* chore: add do not modify block to generated variables file

* chore: update readme

* chore: rename materials exports to imports

* chore: reorganize custom-properties

--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "dist",
     "i18n",
     "images",
-    "materials/*.mod.css",
-    "materials/**/*.mod.css",
+    "materials/custom-properties.css",
+    "materials/custom-properties.json",
+    "materials/media-queries.mod.css",
     "CHANGELOG.md",
     "./README.md",
     "LICENSE",
@@ -35,7 +36,7 @@
   ],
   "scripts": {
     "changelog": "conventional-changelog -p angular -u",
-    "prebuild": "node ./scripts/generate-icon-exports.js && node ./scripts/generate-base-colors.js && node ./scripts/generate-base-shadows.js && node ./scripts/generate-colors-for-story.js",
+    "prebuild": "node ./scripts/generate-icon-exports.js && node ./scripts/generate-base-colors.js && node ./scripts/generate-base-shadows.js && node ./scripts/generate-colors-for-story.js && node ./scripts/extract-materials.js",
     "prestorybook:start": "node ./scripts/generate-base-colors.js && node ./scripts/generate-base-shadows.js && node ./scripts/generate-colors-for-story.js",
     "storybook:build": "build-storybook -o .public",
     "build": "rimraf dist && cross-env NODE_ENV=production rollup -c",
@@ -154,6 +155,7 @@
     "pegjs": "0.10.0",
     "postcss": "7.0.5",
     "postcss-color-mod-function": "3.0.3",
+    "postcss-css-variables": "0.11.0",
     "postcss-custom-media": "7.0.6",
     "postcss-custom-properties": "8.0.8",
     "postcss-discard-comments": "4.0.1",
