chore: improve linters config (#172)
* chore: improve linters

* chore: simplify linting setup

* chore: simplify formatting scripts

--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
     "lint": "jest --projects jest.eslint.config.js jest.stylelint.config.js",
     "lint:js": "jest --config jest.eslint.config.js",
     "lint:css": "jest --config jest.stylelint.config.js",
-    "format:js": "prettier --write '{.storybook,examples,materials,scripts,src}/**/*.js' *.js",
-    "format:css": "prettier --write --parser css '{.storybook,examples,materials,src}/**/*.css' materials/*.css",
-    "format:md": "prettier --write --parser markdown '{.github,.storybook,examples,materials,src}/**/*.md' *.md",
+    "format:js": "prettier --write '**/*.js'",
+    "format:css": "prettier --write --parser css '**/*.css'",
+    "format:md": "prettier --write --parser markdown '**/*.md'",
     "test": "jest --config jest.test.config.js",
     "test:watch": "jest --config jest.test.config.js --watch"
   },
