chore: upgrade jsdom-screenshot to v3.1.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ script:
   # the jest.bundle.config.js tests run on the bundle,
   # so we need to build it first
   - yarn build
-  - yarn run jest --projects jest.*.config.js --maxWorkers=4 --reporters jest-silent-reporter
+  - yarn run jest --projects jest.*.config.js --maxWorkers=4
   - "! test -f fail-tests-because-there-was-an-unhandled-rejection.lock"
 
 before_deploy: yarn build
