--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "classnames": "2.2.6",
     "common-tags": "1.8.0",
     "dom-helpers": "3.4.0",
+    "downshift": "3.1.5",
     "emotion": "9.2.12",
     "flatpickr": "4.5.2",
     "is-touch-device": "1.0.1",
