--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
     "eslint-plugin-prefer-object-spread": "1.2.1",
     "eslint-plugin-prettier": "3.0.0",
     "eslint-plugin-react": "7.11.1",
+    "eslint-plugin-react-percy": "0.2.4",
     "formik": "1.3.2",
     "glob": "7.1.3",
     "graphql": "14.0.2",
