chore: update emotion to v10

--- a/package.json
+++ b/package.json
@@ -59,11 +59,12 @@
     "percy": "react-percy"
   },
   "dependencies": {
+    "@emotion/core": "10.0.4",
+    "@emotion/styled": "10.0.4",
     "classnames": "2.2.6",
     "common-tags": "1.8.0",
     "dom-helpers": "3.4.0",
     "downshift": "3.1.5",
-    "emotion": "9.2.12",
     "flatpickr": "4.5.2",
     "is-touch-device": "1.0.1",
     "lodash.flatmap": "4.5.0",
@@ -75,7 +76,6 @@
     "lodash.uniq": "4.5.0",
     "lodash.without": "4.4.0",
     "prop-types": "15.6.2",
-    "react-emotion": "9.2.12",
     "react-required-if": "1.0.3",
     "react-select": "2.1.2",
     "react-textarea-autosize": "7.1.0-1",
@@ -114,7 +114,7 @@
     "babel-eslint": "10.0.1",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.4",
-    "babel-plugin-emotion": "9.2.11",
+    "babel-plugin-emotion": "10.0.0",
     "babel-plugin-module-rewrite": "0.2.0",
     "babel-plugin-react-intl": "3.0.1",
     "babel-plugin-transform-dynamic-import": "2.1.0",
